# backend

./: .env  .env.action.template  .env.local  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
app/: alembic.ini  gunicorn.conf.py  init_db.sh  main.py  pyproject.toml  requirements.txt
app/domain/entities/: tag.py
app/interfaces/output/: version_repository_interface.py
app/services/http/: main.py
app/services/http/api/: deps.py  router.py
app/services/http/core/: config.py
app/src/: alembic.ini  gunicorn.conf.py  init_db.sh  main.py  pyproject.toml
app/src/common/: exception.py  logging.py  utils.py
app/src/domain/entities/: building.py  event.py  event_room.py  group.py  humidity.py  map.py  pressure.py  role.py  room.py  room_tag.py  sensor.py  tag.py  temperature.py  user.py  user_group.py
app/src/domain/interface_repositories/: building_repository.py  data_repository.py  event_repository.py  event_room_repository.py  group_repository.py  map_repository.py  room_repository.py  room_tag_repository.py  sensor_repository.py  tag_repository.py  user_group_repository.py  user_repository.py
app/src/infrastructure/db/: base.py  session.py
app/src/infrastructure/migrations/: env.py
app/src/presentation/: dependencies.py  deps.py  main.py
app/src/presentation/api/: router.py  secure_ressources.py
app/src/presentation/core/: config.py  open_api_events.py  open_api_maps.py  open_api_tags.py
app/src/presentation/middleware/: auth.py
app/src/presentation/utils/: image_format.py  image_management.py
app/src/use_cases/authentication/: get_current_user_use_case.py  verify_password_use_case.py  verify_user_use_case.py
app/src/use_cases/authentification/: get_current_user_use_case.py  verify_password_use_case.py
app/src/use_cases/building/: create_building_use_case.py  delete_building_use_case.py  get_building_by_id_use_case.py  get_building_list_use_case.py  update_building_use_case.py
app/tests/: conftest.py  test_create_user.py
app/tests/common/: test_utils.py
app/tests/integration/: conftest.py
app/use_cases/version/: get_version.py
(+196 files in other folders)
